# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setap.cfg  tree.txt
.github/workflows/: gendiff.yml
gendiff/: cli.py  engine.py  gendiff.py  generate_diff.py  json.py  parser.py  plain.py  stylish.py  test.py  tree_structure.py
gendiff/formatter/: js_format.py  json.py  plain.py  stylish.py
gendiff/function_tools/: file_difference.py  file_reading.py  js_format.py  parser.py  plain_data.py  stringify_data.py  stringify_plain.py  stringify_stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: file3.json  nested.txt  nested_file2.json  nested_file2.yaml  result.json  result.txt  result_plain.txt  result_stylish.txt
