[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Kem"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
