[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Lbrary for compair two json or yaml files"
authors = ["Kamran <diyeqo@icloud.com>"]
readme = "README.md"
repository = https://github.com/Kem0111/python-project-50
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
codeclimate-test-reporter = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
